# Games-API

./: .gitignore  README.md  README_esp.md  databasegames.db  pyproject.toml  vercel.json
data/: games.csv  users.csv
scripts/: create_db.py  create_db_heroes.py
src/: auth.py  config.py  main.py  utils.py
src/database/: __init__.py  fake_games.py  games_db.py  games_sales_db.py  genre_db.py  platform_db.py  publisher_db.py  users_db.py
src/models/: game_model.py  game_sales_model.py  genre_model.py  platform_model.py  publisher_model.py  users_model.py
src/routes/: game_sales.py  games.py  genre.py  platform.py  publisher.py  users.py
tests/: test_get_games_between.py  test_get_games_by.py  test_get_games_field.py  test_hello_world.py
